Fix popover z-index

--- a/viewer/static/js/es6/components/_variables.less
+++ b/viewer/static/js/es6/components/_variables.less
@@ -5,6 +5,7 @@
 // Z-index
 @header-z: 900;
 @modal-z: 999;
+@popover-z: 900;
 @notification-z: 1000;
 @active-component-z: 99;
 @backdrop-z: 950;
